<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FamiliarModActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:scaleX="1"
                android:scaleY="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_info_circle_24"
                app:tint="@color/azul" />

            <AutoCompleteTextView
                android:id="@+id/spinnerPAISF"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/ingresaPais"
                android:gravity="center"
                android:ellipsize="end"
                android:maxLines="1"
                android:inputType="textAutoComplete"
                android:imeOptions="actionNext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView5" />

            <EditText
                android:id="@+id/etNombreF"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="text"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerPAISF" />

            <EditText
                android:id="@+id/etApellidosF"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/apellidos"
                android:textSize="18sp"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etNombreF" />

            <EditText
                android:id="@+id/etNoIdentidadF"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/noDeDocumento"
                android:inputType="text"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etApellidosF" />

            <Spinner
                android:id="@+id/spinnerParentescoF"
                android:layout_width="300dp"
                android:layout_height="30sp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:hapticFeedbackEnabled="true"
                android:layout_marginTop="@dimen/margin_basic2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etApellidosF" />

            <TextView
                android:id="@+id/tvFechaNacimientoF"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:text="@string/fNacimiento"
                android:textSize="20sp"
                android:textColor="@color/verde_oscuro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etNoIdentidadF" />

            <com.mikhaellopez.lazydatepicker.LazyLocalDatePicker
                android:id="@+id/ldFechaNacimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:ldp_date_format="dd-mm-yyyy"
                app:ldp_text_color="@color/verde_oscuro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvFechaNacimientoF" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etFechaNacimientoF">

                <TextView
                    android:id="@+id/tvSexo"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="Sexo:"
                    android:visibility="gone"
                    android:textColor="@color/verde_oscuro"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/checkHombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hombre"
                    android:textColor="@color/verde"/>

                <CheckBox
                    android:id="@+id/checkMujer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mujer"
                    android:textColor="@color/verde"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/margin_basic3">

                <FrameLayout
                    android:id="@+id/btnGuardar"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="@dimen/margin_basic2"
                    android:layout_marginBottom="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <RelativeLayout
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1">

                                <RelativeLayout
                                    android:layout_width="150dp"
                                    android:layout_height="50dp"
                                    android:layout_centerInParent="true"
                                    android:background="@drawable/bg_rojo">

                                    <ImageView
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_marginStart="3dp"
                                        android:layout_marginTop="3dp"
                                        android:layout_marginEnd="3dp"
                                        android:layout_marginBottom="3dp"
                                        android:src="@drawable/bg_verde"
                                        app:tint="#FFF" />

                                    <RelativeLayout
                                        android:layout_width="40dp"
                                        android:layout_height="40dp"
                                        android:layout_alignParentRight="true"
                                        android:layout_centerVertical="true"
                                        android:layout_marginRight="5dp"
                                        android:background="@drawable/bg_rojo">

                                        <ImageView
                                            android:layout_width="80dp"
                                            android:layout_height="80dp"
                                            android:padding="@dimen/margin_basic1"
                                            android:scaleType="centerInside"
                                            android:scaleX="1.5"
                                            android:scaleY="1.5"
                                            android:src="@drawable/ic_save_24"
                                            app:tint="#fff" />

                                    </RelativeLayout>

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_marginLeft="10dp"
                                        android:layout_marginRight="50dp"
                                        android:gravity="center"
                                        android:text="GUARDAR"
                                        android:textColor="@color/rojo"
                                        android:textSize="18sp"
                                        android:textStyle="bold" />
                                </RelativeLayout>
                            </RelativeLayout>
                        </LinearLayout>
                    </LinearLayout>

                </FrameLayout>

            </LinearLayout>



        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>