<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NombresActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="116dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:scaleX="1"
                android:scaleY="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_info_circle_24"
                app:tint="@color/azul" />

            <AutoCompleteTextView
                android:id="@+id/spinnerPAIS"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ellipsize="end"
                android:gravity="center"
                android:hint="@string/ingresaPais"
                android:imeOptions="actionNext"
                android:inputType="none"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView5" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="text"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerPAIS" />

            <EditText
                android:id="@+id/etApellidos"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/apellidos"
                android:inputType="text"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etNombre" />

            <EditText
                android:id="@+id/etNoIdentidad"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/noDeDocumento"
                android:inputType="text"
                android:text="00"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etApellidos" />

            <TextView
                android:id="@+id/tvFechaNacimiento"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:text="@string/fNacimiento"
                android:textColor="?attr/txtTitle"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etNoIdentidad" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvFechaNacimientoF">

                <com.mikhaellopez.lazydatepicker.LazyLocalDatePicker
                    android:id="@+id/ldFechaNacimiento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_basic1"
                    app:ldp_date_format="dd-mm-yyyy"
                    app:ldp_text_color="?attr/txtFecha" />

                <ImageView
                    android:id="@+id/fechaNacIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_basic1"
                    android:src="@drawable/ic_error_24"
                    android:visibility="gone"
                    app:tint="@color/rojo" />

            </LinearLayout>

            <!--            <EditText-->
            <!--                android:id="@+id/etFechaNacimiento"-->
            <!--                android:layout_width="150dp"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="8dp"-->
            <!--                android:ems="6"-->
            <!--                android:gravity="center"-->
            <!--                android:hint="dd/mm/aaaa"-->
            <!--                android:clickable="false"-->
            <!--                android:focusable="false"-->
            <!--                android:maxLength="10"-->
            <!--                android:textSize="20sp"-->
            <!--                android:inputType="date"-->
            <!--                android:textColor="@color/verde_oscuro"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/tvFechaNacimiento" />-->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etFechaNacimiento">

                <TextView
                    android:id="@+id/tvSexo"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:gravity="center"
                    android:text="Sexo:"
                    android:textColor="@color/verde_oscuro"
                    android:textSize="20sp"
                    android:visibility="gone" />

                <CheckBox
                    android:id="@+id/checkHombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="?attr/colorChk" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hombre"
                    android:textColor="?attr/txtT" />

                <CheckBox
                    android:id="@+id/checkMujer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="?attr/colorChk"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mujer"
                    android:textColor="?attr/txtT" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL_embarazado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="-10dp">


                <CheckBox
                    android:id="@+id/checkEmbarazada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="?attr/colorChk"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Embarazada"
                    android:textColor="?attr/txtT"  />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/margin_basic3">

                <FrameLayout
                    android:id="@+id/btnGuardar"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="@dimen/margin_basic2"
                    android:layout_marginBottom="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <RelativeLayout
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1">

                                <RelativeLayout
                                    android:layout_width="150dp"
                                    android:layout_height="50dp"
                                    android:layout_centerInParent="true"
                                    android:background="@drawable/bg_rojo"
                                    android:backgroundTint="?attr/colorBtn">

                                    <ImageView
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_marginStart="3dp"
                                        android:layout_marginTop="3dp"
                                        android:layout_marginEnd="3dp"
                                        android:layout_marginBottom="3dp"
                                        android:src="@drawable/bg_verde"
                                        app:tint="?attr/bgAll" />

                                    <RelativeLayout
                                        android:layout_width="40dp"
                                        android:layout_height="40dp"
                                        android:layout_alignParentRight="true"
                                        android:layout_centerVertical="true"
                                        android:layout_marginRight="5dp"
                                        android:background="@drawable/bg_rojo"
                                        android:backgroundTint="?attr/colorBtn">

                                        <ImageView
                                            android:layout_width="80dp"
                                            android:layout_height="80dp"
                                            android:padding="@dimen/margin_basic1"
                                            android:scaleType="centerInside"
                                            android:scaleX="1.5"
                                            android:scaleY="1.5"
                                            android:src="@drawable/ic_save_24"
                                            app:tint="?attr/bgAll" />

                                    </RelativeLayout>

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_marginLeft="10dp"
                                        android:layout_marginRight="50dp"
                                        android:gravity="center"
                                        android:text="GUARDAR"
                                        android:textColor="?attr/colorBtn"
                                        android:textSize="18sp"
                                        android:textStyle="bold" />
                                </RelativeLayout>
                            </RelativeLayout>
                        </LinearLayout>
                    </LinearLayout>

                </FrameLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>